changing to correct FA and GF uses

--- a/index.html
+++ b/index.html
@@ -5,19 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 1</title>
     <link rel="stylesheet" href="./Styles/styles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Carlito:ital,wght@0,400;0,700;1,400;1,700&family=Lilita+One&display=swap">
-    <style>
-        header {
-            font-family: 'Carlito', sans-serif;
-        }
-        main {
-            font-family: 'Carlito', sans-serif;
-            color: white;
-        }
-        h1 {
-            font-family: 'Lilita One', sans-serif;
-        }
-    </style>
+
+    <!-- Initializing Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Carlito:ital,wght@0,400;0,700;1,400;1,700&family=Lilita+One&display=swap" rel="stylesheet">
+
+    <!-- Initializing Font Awesome -->
+    <script src="https://kit.fontawesome.com/abb2e2c90b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -29,8 +24,10 @@
             <h2>Products</h2>
             <h2>About Us</h2>
             <h2>Contact</h2>
-            <div class="shopping-cart-icon">
-                <img src="./Images/cart-shopping-solid.svg" alt="Shopping Cart" width=30px height=auto>
+            <div class="shopping-cart-container">
+                <div class="shopping-cart-icon">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
             </div>
             <div class="mascot-icon">
                 <img src="./Images/haribo-bear.png" alt="Haribo Bear" width=40px height=auto>
