--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <!-- Header Section -->
     <header class="header">
         <div class="logo">
             <img src="./Images/Haribo-logo.png" alt="Haribo Logo" width=150px height=50px>
@@ -35,11 +36,15 @@
         </div>
     </header>
 
+    <!-- Main Product Page Content -->
     <main>
+        <!-- Overall container for all product page content -->
         <section class="card-container">
+            <!-- Product image -->
             <div class="product-img-card">
                 <img src="./Images/happy-cola.png" alt="Haribo Gold Bears" width=350px height=auto>
             </div>
+            <!-- Product information, quantity, and options -->
             <section class="interactive-container">
                 <div class="product-info-card">
                     <div class="description-card">
@@ -51,6 +56,7 @@
                         <button>Add to Cart</button>
                     </div>
                 </div>
+                <!-- Quantity Selector with cards of options for quantity -->
                 <div class="quantity-container">
                     <h3>Quantity</h3>
                     <div class="quantity-selector-card">
