--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
     <!-- Header Section -->
     <header class="header">
         <div class="logo">
-            <img src="./Images/Haribo-logo.png" alt="Haribo Logo" width=150px height=50px>
+            <a href="./index.html"><img src="./Images/Haribo-logo.png" alt="Haribo Logo" width=150px height=50px></a>
         </div>
         <div class="nav-bar">
-            <h2>Products</h2>
-            <h2>About Us</h2>
-            <h2>Contact</h2>
+            <!-- Couldn't figure out how I wanted this section, because I wanted to use a nav tag, but I couldn't figure out how to use it with the flexbox formatting. So I asked Copilot "Can I add a hrefs to the h2 tags in the nav-bar div?" and it provided me with this as an option. -->
+            <a href="./index.html"><h2>Products</h2></a>
+            <a href="./index.html"><h2>About Us</h2></a>
+            <a href="./index.html"><h2>Contact</h2></a>
             <div class="shopping-cart-container">
-                <div class="shopping-cart-icon">
-                    <i class="fa-solid fa-cart-shopping"></i>
+                <a href="./index.html"><div class="shopping-cart-icon">
+                    <i class="fa-solid fa-cart-shopping"></i></a>
                 </div>
             </div>
             <div class="mascot-icon">
