--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Header Section -->
     <header class="header">
         <div class="logo">
-            <a href="./index.html"><img src="./Images/Haribo-logo.png" alt="Haribo Logo" width=150px height=50px></a>
+            <a href="./index.html"><img src="./Images/Haribo-logo.png" alt="Haribo Logo"></a>
         </div>
         <div class="nav-bar">
             <!-- Couldn't figure out how I wanted this section, because I wanted to use a nav tag, but I couldn't figure out how to use it with the flexbox formatting. So I asked Copilot "Can I add a hrefs to the h2 tags in the nav-bar div?" and it provided me with this as an option. -->
@@ -50,7 +50,7 @@
                 <div class="product-info-card">
                     <div class="description-card">
                         <h1>Happy Cola</h1>
-                        <p>A retro choice that packs a burst of flavor.</p>
+                        <p>A familiar choice that packs a burst of cola-licious flavor.</p>
                     </div>
                 </div>
                 <!-- Price Container and add to cart -->
@@ -61,28 +61,53 @@
                 </div>
                 <!-- Quantity Selector with cards of options for quantity -->
                 <div class="quantity-container">
-                    <h4>Quantity</h4>
+                    <h4>Choose your quantity:</h4>
                     <div class="quantity-selector-container">
+                        <div id="pack-of-3">
+                            <img src="./Images/pack-of-3.png" alt="3 Pack of Gummies" width=125px height=auto>
+                            <p>3 Pack</p>
+                        </div>
                         <div id="pack-of-6">
-                            <img src="./Images/pack-of-6.png" alt="Six Pack of Gummies" width=200px height=auto>
+                            <img src="./Images/pack-of-6.png" alt="6 Pack of Gummies" width=200px height=auto>
+                            <p>6 Pack</p>
                         </div>
                         <div id="pack-of-24">
                             <img src="./Images/pack-of-24.png" alt="24 Pack of Gummies" width=100px height=auto>
+                            <p>24 Pack</p>
                         </div>
                     </div>
                 </div>
             </section>
+        </section>
+        <!-- Suggested Products section -->
+        <section class="related-products-section">
+            <h2>Customers who bought these also bought</h2>
+            <div class="related-products-container">
+                <img src="./Images/goldbears-clip.png" alt="Goldbears">
+                <img src="./Images/twin-snakes-clip.png" alt="Twin Snakes">
+                <img src="./Images/frogs-clip.png" alt="Frogs">
+                <img src="./Images/goldbears-sour-clip.png" alt="Sour Goldbears">
+                <img src="./Images/smurfs-clip.png" alt="Smurfs">
+                <img src="./Images/red-white-blue-clip.png" alt="Red, White, and Blue Gummis">
+                <img src="./Images/fizzy-cola-clip.png" alt="Fizzy Cola">
+            </div>
+            <div class="limited-edition-product">
+                <h2>Also, don't wait! Check out our NEW limited edition FOOTBALL MIX while it's still football season!</h2>
+                <div class="limited-edition-product-container">
+                    <img src="./Images/football-mix-clip.png" alt="Football Mix">
+                </div>
+            </div>
         </section>
     </main>
 
     <!-- Footer Section -->
      <footer class="footer">
         <div class="footer-content">
-            <div class="footer-logo">
-                <img src="./Images/Haribo-logo.png" alt="Haribo Logo" width=150px height=50px>
-            </div>
             <div class="copyright">
                 <p>&copy; 2025 Haribo. All Rights Reserved.</p>
+            </div>
+            <div class="footer-logo">
+                <img src="./Images/Haribo-logo.png" alt="Haribo Logo" width=150px height=50px>
             </div>
             <div class="footer-mascot">
                 <img src="./Images/haribo-bear.png" alt="Haribo Bear" width=40px height=auto>
