Adding comment explaining AI use. Finishing edits to pdf.

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </video>
     </section>
 
-    <!-- Contact Us Form -->
+    <!-- Contact Us Form - had ChatGPT provide me with the general layout for this, and then I edited it. ChatGPT actually provided very bare bones, I added all of the divs, the formatting, and the customization as far as inputs go. So I should have just coded this whole section myself but it did give me a good start. -->
     <section class="contact-form-container w-full flex flex-col justify-center items-center p-7 gap-8">
         <h2>Contact Us</h2>
         <p>Have a question or comment? Fill out the form below and we'll get back to you as soon as possible!</p>
@@ -193,3 +193,11 @@
     </footer>
 </body>
 </html>
+
+<!-- 
+
+CHATGPT/AI USE:
+ 
+I clearly marked in my code where I used ChatGPT or the integrated Copilot in VS Code to help me with certain parts of the project. Several other times I tried to use ChatGPT to help me debug my code or to help me know how to try to implement interactivity, especially with a potential image gallery for the product image, but it actually didn't help me at all and I needed to figure out the bugs in my code myself. In the future I will probably try to use AI more, but less for the entire element and more for helping me with advice on how to implement certain things. Especially with the cleanliness of my code, which I think could be better sometimes.
+
+-->
