--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body>
     <!-- Header Section -->
     <header class="header sticky top-0 flex flex-row justify-between items-center px-8 py-[.25rem] bg-[#f8f9fa] [border-bottom:1px_solid_#e9ecef]">
-        <div class="logo">
-            <a href="./index.html" tabindex="1"><img src="./Images/Haribo-logo.png" alt="Haribo Logo"></a>
+        <div class="logo p-0 w-55">
+            <a href="./index.html" tabindex="1"><img class="w-55 h-auto object-cover"src="./Images/Haribo-logo.png" alt="Haribo Logo"></a>
         </div>
         <div class="nav-bar flex gap-20 p-4 items-center justify-around text-[#353238] text-[.75rem]">
             <!-- Couldn't figure out how I wanted this section, because I wanted to use a nav tag, but I couldn't figure out how to use it with the flexbox formatting. So I asked Copilot "Can I add a hrefs to the h2 tags in the nav-bar div?" and it provided me with this as an option. -->
