adjusting spacing a little bit for aesthetic

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </section>
 
         <!-- Suggested Products section -->
-        <section class="related-products-section flex flex-col justify-center items-center p-8 gap-8">
+        <section class="related-products-section flex flex-col justify-center items-center mt-4 p-8 gap-8">
             <h2>Customers who bought Happy-Cola also bought:</h2>
             <div class="related-products-container">
                 <img src="./Images/goldbears-clip.png" alt="Goldbears" tabindex="10">
